# unconst

./: Cargo.toml  README.md
src/: lib.rs  unconst.rs
src/unconst/: impl_const.rs
