[package]
name = "unconst"
version = "0.2.0"
edition = "2021"
description = "Macro to unconst consts/fns/enums/structs/traits/impls"
license = "MIT/Apache-2.0"
homepage = "https://github.com/synthet-ic/unconst"
documentation = "https://docs.rs/unconst"
rust-version = "1.62.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[features]
const = []
