[package]
name = "unconst"
version = "0.3.0"
edition = "2021"
description = "Macro to unconst consts/fns/enums/structs/traits/impls"
license = "MIT/Apache-2.0"
homepage = "https://github.com/synthet-ic/unconst"
documentation = "https://docs.rs/unconst"
rust-version = "1.62.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
syn = { version = "1", features = ["full", "parsing", "extra-traits"], optional = true }

[features]
default = ["proc-macro2", "quote", "syn"]
const = []
